Implement durable order acceptance and recoverable execution (NEXT-103-105)